# sqlite-android

./: build.gradle  gradle.properties
sqlite-android/: build.gradle
sqlite-android/cmake/: sqlite-androidConfig.cmake
sqlite-android/src/main/cmake/: CMakeLists.txt  sqlite-androidConfig.cmake
sqlite-android/src/main/jni/: Application.mk
sqlite-android/src/main/jni/sqlite/: Android.mk  JNIHelp.cpp
sqlite-android/src/main/prefab/: prefab.json
sqlite-android/src/main/prefab/modules/sqlite-android/: module.json
